# object-detection

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  requirements.txt  settings.yaml
.github/workflows/: python-package.yml
object_detection/core/: config.py  exceptions.py  utils.py
object_detection/format/: dataset.py  validators.py
object_detection/model/: __init__.py
src/config/: config.py
src/core/: __init__.py  config.py  utils.py
src/format/: __init__.py  validators.py
tests/config/: config.py
tests/core/: settings.test.yaml  test_config.py
tests/core/test_config_files/: only-required-settings.test.yaml  settings.test.yaml
tests/format/: conftest.py  test_dataset.py  test_validators.py
